Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33839

Docking above right toolbar not possible

XMLWordPrintable

    • b86426c81e1c95126ff9b8b84ed5824160c2965b

      Docking toolbar above right toolbar isn't possible if the right toolbar has only 3 or less tools in it.
      Use attached example application to reproduce the issue:

      1. Dock the toolbar with 4 toolbuttons to the right area.
      2. Dock the toolbar with 3 toolbuttons so that two rows of toolbars are docked to the top.
      3. Dock the toolbar with 2 toolbuttons to the right toolbar. Dock it above it the toolbar with 4 buttons.
        (Note that this works)
      4. Now try swap the toolbars by docking the toolbar with 4 toolbuttons to be above the toolbar docked in step 3.
        => Observe that the toolbar with 4 toolbuttons can only be docked below the toolbar with 2 buttons, while the toolbar with 2 buttons can be docked both above and below the toolbar with 4 buttons.

        1. cant dock above.png
          82 kB
          Kimmo Leppälä
        2. toolbarTest.zip
          4 kB
          Kimmo Leppälä
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            smd Jan Arve
            kileppal Kimmo Leppälä
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes