Fixed a bug where toolbars sometimes could not be docked.

Task-number: QTBUG-33839

Change-Id: I542fb894c31ce38509a70a71bd0ea1bc84bb2a03
Reviewed-by: Jens Bache-Wiig <jens.bache-wiig@digia.com>

cregit: b86426c81e1c95126ff9b8b84ed5824160c2965b https://github.com/qt/qtbase/commit/b86426c81e1c95126ff9b8b84ed5824160c2965b